--- a/myall.css
+++ b/myall.css
@@ -39,7 +39,7 @@ nav {
 header {
 	width: 100%;
 	height: 132vh;
-	background-image: url(%E5%9C%96%E7%89%87%E6%AA%94/%E5%B8%83%E8%BE%BE%E6%8B%89%E5%AE%AB3.jpeg);
+	background-image: url(ppp/%E5%B8%83%E8%BE%BE%E6%8B%89%E5%AE%AB3.jpeg);
 	background-size: cover;
 	background-position: 0% center;
 	display: flex;
@@ -185,7 +185,7 @@ article h3   {
 }
 .ppp3  {
 	width: 450pt;
-	background-image: url(%E5%9C%96%E7%89%87%E6%AA%94/shutterstock_96567067_0.jpeg);
+	background-image: url(ppp/shutterstock_96567067_0.jpeg);
 	height: 270pt;
 	background-size: cover;
 	margin-left: 401px;
